--- a/app/listing.twig
+++ b/app/listing.twig
@@ -76,7 +76,7 @@
 
           <h3 class="block-title"> Overview</h3>
 
-          <ul class="thumb-service thumb--col-4">
+          <ul class="thumb-service thumb--col-4 thumb-overview">
             <li><i class="fa fa-building-o"></i> Apartment</li>  
             <li><i class="fa fa-bath"></i> 1 Bathroom(s)</li>  
             <li><i class="fa fa-bed"></i> 1 Bedroom(s)</li>  
