--- a/app/index.twig
+++ b/app/index.twig
@@ -183,7 +183,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -205,7 +205,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -227,7 +227,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -249,7 +249,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -271,7 +271,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -293,7 +293,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -315,7 +315,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -337,7 +337,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -361,7 +361,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -383,7 +383,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -405,7 +405,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -427,7 +427,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -449,7 +449,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -471,7 +471,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -493,7 +493,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -516,7 +516,7 @@
 					</div>
 					<div class="thumb-info">
 						<h4>house code 456</h4>
-						<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+						<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 						<div class="thumb-service">
 							<span><i class="fa fa-map-marker"></i> District 7</span>
 							<span><i class="fa fa-bed"></i> 1 bed </span>
