--- a/app/listing.twig
+++ b/app/listing.twig
@@ -296,7 +296,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -318,7 +318,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -340,7 +340,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -362,7 +362,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -393,7 +393,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -415,7 +415,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -437,7 +437,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
@@ -459,7 +459,7 @@
           </div>
           <div class="thumb-info">
             <h4>house code 456</h4>
-            <a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+            <h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
             <div class="thumb-service">
               <span><i class="fa fa-map-marker"></i> District 7</span>
               <span><i class="fa fa-bed"></i> 1 bed </span>
