--- a/app/project.twig
+++ b/app/project.twig
@@ -237,7 +237,7 @@
 				</div>
 				<div class="thumb-info">
 					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+					<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 					<div class="thumb-service">
 						<span><i class="fa fa-map-marker"></i> District 7</span>
 						<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -259,7 +259,7 @@
 				</div>
 				<div class="thumb-info">
 					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+					<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 					<div class="thumb-service">
 						<span><i class="fa fa-map-marker"></i> District 7</span>
 						<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -281,7 +281,7 @@
 				</div>
 				<div class="thumb-info">
 					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+					<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 					<div class="thumb-service">
 						<span><i class="fa fa-map-marker"></i> District 7</span>
 						<span><i class="fa fa-bed"></i> 1 bed </span>
@@ -303,7 +303,7 @@
 				</div>
 				<div class="thumb-info">
 					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
+					<h3><a href="#">Pretty service appartment with bright bedroom</a></h3>
 					<div class="thumb-service">
 						<span><i class="fa fa-map-marker"></i> District 7</span>
 						<span><i class="fa fa-bed"></i> 1 bed </span>
